个人中心接口接入

--- a/app/src/main/res/layout/act_add_alipay_account.xml
+++ b/app/src/main/res/layout/act_add_alipay_account.xml
@@ -30,7 +30,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:background="@null"
             android:layout_width="0dp" android:layout_height="wrap_content"
-             app:layout_constraintTop_toTopOf="@+id/textView"/>
+            app:layout_constraintTop_toTopOf="@+id/textView" android:id="@+id/input_aliaccount"/>
 
     <ImageView
             app:layout_constraintTop_toTopOf="@id/textView"
