--- a/app/src/main/res/layout/act_recharge_card.xml
+++ b/app/src/main/res/layout/act_recharge_card.xml
@@ -24,7 +24,7 @@
             <EditText
                     android:background="@drawable/shape_stroke_ea"
                     android:layout_marginTop="7dp"
-                    android:layout_width="match_parent" android:layout_height="39dp"/>
+                    android:layout_width="match_parent" android:layout_height="39dp" android:id="@+id/input_card_num"/>
 
             <TextView
                     android:layout_marginTop="15dp"
@@ -39,7 +39,8 @@
                     android:layout_width="match_parent" android:layout_height="39dp">
                 <EditText
                         android:background="@drawable/shape_stroke_ea"
-                        android:layout_weight="1" android:layout_width="0dp" android:layout_height="match_parent"/>
+                        android:layout_weight="1" android:layout_width="0dp" android:layout_height="match_parent"
+                        android:id="@+id/input_captcha"/>
                 <ImageView
                         android:background="#EEE"
                         android:layout_marginLeft="20dp" android:layout_weight="1" android:layout_width="0dp" android:layout_height="match_parent"/>
@@ -51,13 +52,14 @@
                     android:textColor="#ffffffff"
                     android:textSize="16dp"
                     android:background="@drawable/shape_primary_dark_btn"
-                    android:layout_width="match_parent" android:layout_height="39dp"/>
-            
+                    android:layout_width="match_parent" android:layout_height="39dp" android:id="@+id/btn_search"/>
+
             <FrameLayout
                     android:layout_marginTop="15dp"
-                    android:layout_width="142dp" android:layout_height="wrap_content">
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"
+                    android:id="@+id/fl_to_buy">
                 <TextView
-                        android:text="( 我没有卡密，                )"
+                        android:text="( 我没有卡密，                  )"
                         android:textColor="#ff535353"
                         android:textSize="13dp"
                         android:layout_width="wrap_content" android:layout_height="wrap_content"/>
@@ -132,14 +134,15 @@
                         android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
                 <TextView
-                    app:layout_constraintTop_toTopOf="@id/tv_type_label"
-                    app:layout_constraintBottom_toBottomOf="@id/tv_type_label"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginLeft="104dp"
-                    android:text="未知"
-                    android:textColor="#ff505050"
-                    android:textSize="14dp"
-                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+                        app:layout_constraintTop_toTopOf="@id/tv_type_label"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_type_label"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_marginLeft="104dp"
+                        android:text="未知"
+                        android:textColor="#ff505050"
+                        android:textSize="14dp"
+                        android:layout_width="wrap_content" android:layout_height="wrap_content"
+                        android:id="@+id/tv_card_num"/>
                 <TextView
                         app:layout_constraintTop_toTopOf="@id/tv_vip_date_label"
                         app:layout_constraintBottom_toBottomOf="@id/tv_vip_date_label"
@@ -148,7 +151,8 @@
                         android:text="未知"
                         android:textColor="#ff505050"
                         android:textSize="14dp"
-                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+                        android:layout_width="wrap_content" android:layout_height="wrap_content"
+                        android:id="@+id/tv_card_time"/>
                 <TextView
                         app:layout_constraintTop_toTopOf="@id/tv_card_price_label"
                         app:layout_constraintBottom_toBottomOf="@id/tv_card_price_label"
@@ -157,7 +161,8 @@
                         android:text="未知"
                         android:textColor="#ff505050"
                         android:textSize="14dp"
-                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+                        android:layout_width="wrap_content" android:layout_height="wrap_content"
+                        android:id="@+id/tv_card_value"/>
                 <TextView
                         app:layout_constraintTop_toTopOf="@id/tv_end_date_label"
                         app:layout_constraintBottom_toBottomOf="@id/tv_end_date_label"
@@ -166,7 +171,8 @@
                         android:text="未知"
                         android:textColor="#ff505050"
                         android:textSize="14dp"
-                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+                        android:layout_width="wrap_content" android:layout_height="wrap_content"
+                        android:id="@+id/tv_card_end_time"/>
                 <TextView
                         app:layout_constraintTop_toTopOf="@id/tv_state_label"
                         app:layout_constraintBottom_toBottomOf="@id/tv_state_label"
@@ -175,23 +181,24 @@
                         android:text="未知"
                         android:textColor="#ff505050"
                         android:textSize="14dp"
-                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+                        android:layout_width="wrap_content" android:layout_height="wrap_content"
+                        android:id="@+id/tv_card_sate"/>
             </android.support.constraint.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
     <View
             android:background="#EEEEEE"
             android:layout_width="match_parent" android:layout_height="1dp"/>
-        <Button
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="8dp"
-                android:layout_gravity="center"
-                android:text="充值"
-                android:textColor="#ffffffff"
-                android:textSize="16dp"
-                android:background="@drawable/shape_primary_dark_btn"
-                android:layout_marginLeft="26dp"
-                android:layout_marginRight="26dp"
-                android:layout_width="match_parent" android:layout_height="39dp"/>
+    <Button
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="8dp"
+            android:layout_gravity="center"
+            android:text="充值"
+            android:textColor="#ffffffff"
+            android:textSize="16dp"
+            android:background="@drawable/shape_primary_dark_btn"
+            android:layout_marginLeft="26dp"
+            android:layout_marginRight="26dp"
+            android:layout_width="match_parent" android:layout_height="39dp" android:id="@+id/btn_recharge"/>
 
 </LinearLayout>
