--- a/app/src/main/res/layout/vh_introduce_header.xml
+++ b/app/src/main/res/layout/vh_introduce_header.xml
@@ -7,8 +7,12 @@
 
 
     <TextView
-            android:layout_marginLeft="9dp"
+            android:layout_marginRight="18dp"
+            android:layout_marginLeft="18dp"
             android:layout_marginTop="33dp"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/tv_title"
@@ -18,15 +22,20 @@
             android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
     <TextView
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constrainedWidth="true"
+            android:ellipsize="end"
+            android:singleLine="true"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_title"
             android:layout_marginLeft="18dp"
-            android:layout_marginTop="61dp"
+            android:layout_marginTop="6dp"
             android:id="@+id/tv_introduce"
-            android:text="简介：韩剧里女生的各种撒娇，男生请慎点..."
+            android:text="简介：韩剧里女生的各种撒娇，男生请慎点...简介：韩剧里女生的各种撒娇，男生请慎点..."
             android:textColor="#ff000000"
             android:textSize="14dp"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+            android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toLeftOf="@+id/img_show_all_info"/>
 
     <ImageView
             android:src="@mipmap/like_sel"
@@ -54,14 +63,17 @@
             app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/img_download"
             android:layout_width="17dp" android:layout_height="17dp"/>
-    
+
     <ImageView
-            android:layout_marginTop="68dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:padding="3dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:layout_marginTop="61dp"
+            app:layout_constraintTop_toTopOf="@id/tv_introduce"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="29dp"
             android:src="@mipmap/arrow_down"
-            android:layout_width="13dp" android:layout_height="7dp"/>
+            android:layout_width="20dp" android:id="@+id/img_show_all_info"/>
     <View
             android:layout_marginTop="12dp"
             android:layout_marginLeft="24dp"
@@ -88,7 +100,7 @@
             android:text="100金币购买"
             android:textColor="#ff333333"
             android:textSize="16dp"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tv_video_price"/>
     <TextView
             android:alpha="0.4"
             app:layout_constraintBottom_toTopOf="@id/divider_3"
@@ -158,24 +170,35 @@
             android:id="@+id/tv_capture_label"
             android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
-    <android.support.design.card.MaterialCardView
-            android:clipChildren="true"
-            app:cardCornerRadius="11dp"
-            android:layout_marginLeft="9dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_capture_label"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_width="171dp" android:layout_height="102dp">
-        <ImageView android:layout_width="match_parent" android:layout_height="match_parent"/>
-    </android.support.design.card.MaterialCardView>
+    <android.support.v7.widget.RecyclerView
+        app:layout_constraintTop_toBottomOf="@id/tv_capture_label"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+            android:id="@+id/rcv_capture"
+            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content">
 
-    <android.support.design.card.MaterialCardView
-            app:cardCornerRadius="11dp"
-            android:layout_marginRight="9dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_capture_label"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_width="171dp" android:layout_height="102dp">
-        <ImageView android:layout_width="match_parent" android:layout_height="match_parent"/>
-    </android.support.design.card.MaterialCardView>
+    </android.support.v7.widget.RecyclerView>
+    <!--<android.support.design.card.MaterialCardView-->
+            <!--android:layout_marginBottom="4dp"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--android:clipChildren="true"-->
+            <!--app:cardCornerRadius="11dp"-->
+            <!--android:layout_marginLeft="9dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--app:layout_constraintTop_toBottomOf="@id/tv_capture_label"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--android:layout_width="171dp" android:layout_height="102dp">-->
+        <!--<ImageView android:layout_width="match_parent" android:layout_height="match_parent"/>-->
+    <!--</android.support.design.card.MaterialCardView>-->
+
+    <!--<android.support.design.card.MaterialCardView-->
+            <!--app:cardCornerRadius="11dp"-->
+            <!--android:layout_marginRight="9dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--app:layout_constraintTop_toBottomOf="@id/tv_capture_label"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+            <!--android:layout_width="171dp" android:layout_height="102dp">-->
+        <!--<ImageView android:layout_width="match_parent" android:layout_height="match_parent"/>-->
+    <!--</android.support.design.card.MaterialCardView>-->
 </android.support.constraint.ConstraintLayout>
