--- a/app/src/main/res/layout/act_account_info.xml
+++ b/app/src/main/res/layout/act_account_info.xml
@@ -45,6 +45,7 @@
                     android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
             <TextView
+                    android:id="@id/tv_name"
                     android:alpha="0.6"
                     android:layout_marginRight="40dp"
                     android:layout_gravity="right|center_vertical"
