--- a/app/src/main/res/layout/layout_video_list_empty.xml
+++ b/app/src/main/res/layout/layout_video_list_empty.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+        android:id="@+id/ll_empty"
         android:layout_weight="1"
         android:orientation="vertical"
         android:gravity="center"
