--- a/app/src/main/res/layout/vh_bank_card_account_item.xml
+++ b/app/src/main/res/layout/vh_bank_card_account_item.xml
@@ -13,6 +13,7 @@
                                                  android:layout_height="match_parent">
         
         <ImageView
+
                 android:layout_marginLeft="17dp"
                 android:layout_marginTop="22dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -21,6 +22,7 @@
                 android:layout_width="21dp" android:layout_height="21dp"/>
 
         <TextView
+                android:id="@+id/tv_bank_name"
                 android:layout_marginLeft="51dp"
                 android:layout_marginTop="19dp"
                 android:includeFontPadding="false"
@@ -32,6 +34,7 @@
                 android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
         <TextView
+                android:id="@+id/tv_card_type"
                 android:layout_marginLeft="51dp"
                 android:layout_marginTop="43dp"
                 app:layout_constraintLeft_toLeftOf="parent"
