--- a/app/src/main/res/layout/vh_collection_video.xml
+++ b/app/src/main/res/layout/vh_collection_video.xml
@@ -25,6 +25,13 @@
             android:layout_width="90dp" android:layout_height="54dp"/>
 
     <TextView
+            app:layout_constraintVertical_bias="0"
+            app:layout_constrainedHeight="true"
+            app:layout_constraintBottom_toTopOf="@id/tv_date"
+            android:ellipsize="end"
+            android:lines="2"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintHorizontal_bias="0"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="7dp"
             android:includeFontPadding="false"
@@ -33,7 +40,8 @@
             android:text="【中韩字幕】"
             android:textColor="#ff000000"
             android:textSize="16dp"
-            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tv_name"/>
+            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tv_name"
+            app:layout_constraintRight_toLeftOf="@+id/tv_type" android:layout_marginEnd="8dp"/>
     <TextView
             android:layout_marginLeft="16dp"
             app:layout_constraintLeft_toRightOf="@id/img_cover"
