--- a/app/src/main/res/layout/vh_comment.xml
+++ b/app/src/main/res/layout/vh_comment.xml
@@ -38,6 +38,7 @@
             android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
     <TextView
+            android:id="@+id/tv_date"
             android:layout_marginTop="14dp"
             android:layout_marginRight="40dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -48,6 +49,7 @@
             android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
     <TextView
+            android:id="@+id/tv_content"
             android:layout_marginBottom="19dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="44dp"
