--- a/app/src/main/res/layout/vh_deal_record_item.xml
+++ b/app/src/main/res/layout/vh_deal_record_item.xml
@@ -96,6 +96,6 @@
                 android:text="已打款"
                 android:textColor="#ff000000"
                 android:textSize="12dp"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+                android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tv_state"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.design.card.MaterialCardView>
