--- a/app/src/main/res/layout/frag_deal_record.xml
+++ b/app/src/main/res/layout/frag_deal_record.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:background="#F3F3F3"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">
 <LinearLayout
+        android:background="@color/white"
         android:id="@+id/ll_empty"
         android:orientation="vertical"
         android:gravity="center"
