--- a/app/src/main/res/layout/frag_personal.xml
+++ b/app/src/main/res/layout/frag_personal.xml
@@ -141,10 +141,15 @@
             </android.support.constraint.Group>
 
             <android.support.constraint.Group
-                    app:constraint_referenced_ids="tv_coin,tv_money,tv_vip_end_date,tv_is_vip,tv_name,img_crown,img_avatar"
+                    app:constraint_referenced_ids="tv_coin,tv_money,tv_name,img_crown,img_avatar"
                     android:id="@+id/group_login" android:layout_width="wrap_content" android:layout_height="wrap_content">
 
             </android.support.constraint.Group>
+
+            <android.support.constraint.Group
+                    android:id="@+id/group_vip"
+                    app:constraint_referenced_ids="tv_vip_end_date,tv_is_vip"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
@@ -220,7 +225,7 @@
                         android:layout_width="44dp" android:layout_height="36dp"/>
                 <TextView
                         android:layout_marginTop="8dp"
-                        android:text="交易纪录"
+                        android:text="交易记录"
                         android:textColor="#ff000000"
                         android:textSize="12dp"
                         android:layout_width="wrap_content" android:layout_height="wrap_content"/>
