--- a/app/src/main/res/layout/frag_type_video.xml
+++ b/app/src/main/res/layout/frag_type_video.xml
@@ -29,6 +29,7 @@
     </LinearLayout>
 
     <LinearLayout
+            android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:id="@+id/ll_video_type"
             android:orientation="vertical"
