--- a/app/src/main/res/layout/act_modify_psd.xml
+++ b/app/src/main/res/layout/act_modify_psd.xml
@@ -12,7 +12,7 @@
             <TextView
                     android:gravity="center_vertical"
                     android:textStyle="bold"
-                    android:text="旧密码"
+                    android:text="旧  密  码"
                     android:textColor="#ff000000"
                     android:textSize="16dp"
                     android:layout_width="wrap_content" android:layout_height="match_parent"/>
@@ -37,7 +37,7 @@
             <TextView
                     android:gravity="center_vertical"
                     android:textStyle="bold"
-                    android:text="新密码"
+                    android:text="新  密  码"
                     android:textColor="#ff000000"
                     android:textSize="16dp"
                     android:layout_width="wrap_content" android:layout_height="match_parent"/>
@@ -62,7 +62,7 @@
             <TextView
                     android:gravity="center_vertical"
                     android:textStyle="bold"
-                    android:text="确认新密码"
+                    android:text="确认密码"
                     android:textColor="#ff000000"
                     android:textSize="16dp"
                     android:layout_width="wrap_content" android:layout_height="match_parent"/>
