--- a/app/src/main/res/layout/act_recharge_card.xml
+++ b/app/src/main/res/layout/act_recharge_card.xml
@@ -22,6 +22,8 @@
                     android:includeFontPadding="false"
                     android:layout_width="wrap_content" android:layout_height="wrap_content"/>
             <EditText
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
                     android:background="@drawable/shape_stroke_ea"
                     android:layout_marginTop="7dp"
                     android:layout_width="match_parent" android:layout_height="39dp" android:id="@+id/input_card_num"/>
@@ -38,6 +40,8 @@
                     android:layout_marginTop="7dp"
                     android:layout_width="match_parent" android:layout_height="39dp">
                 <EditText
+                        android:paddingLeft="2dp"
+                        android:paddingRight="2dp"
                         android:background="@drawable/shape_stroke_ea"
                         android:layout_weight="1" android:layout_width="0dp" android:layout_height="match_parent"
                         android:id="@+id/input_captcha"/>
