--- a/app/src/main/res/layout/vh_bank_card_account_item.xml
+++ b/app/src/main/res/layout/vh_bank_card_account_item.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-                               android:layout_marginTop="22dp"
-                               android:layout_marginLeft="30dp"
-                               android:layout_marginRight="30dp"
-                              app:cardCornerRadius="5dp"
-                              app:cardBackgroundColor="#777"
-                               xmlns:app="http://schemas.android.com/apk/res-auto"
-                               android:background="@color/white"
-                               android:layout_width="match_parent"
-                               android:layout_height="140dp">
+                                              xmlns:app="http://schemas.android.com/apk/res-auto"
+                                              android:layout_marginTop="22dp"
+                                              android:layout_marginLeft="30dp"
+                                              android:layout_marginRight="30dp"
+                                              app:cardCornerRadius="5dp"
+                                              app:cardBackgroundColor="#486DA2"
+                                              android:layout_width="match_parent"
+                                              android:layout_height="140dp">
     <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                  android:layout_height="match_parent">
-        
+
         <ImageView
 
                 android:layout_marginLeft="17dp"
@@ -98,7 +97,8 @@
                 android:text="1234"
                 android:textColor="#ffffffff"
                 android:textSize="12dp"
-                android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tv_last_card_num"/>
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:id="@+id/tv_last_card_num"/>
     </android.support.constraint.ConstraintLayout>
 
 </android.support.design.card.MaterialCardView>
