--- a/app/src/main/res/layout/vh_comment.xml
+++ b/app/src/main/res/layout/vh_comment.xml
@@ -49,17 +49,19 @@
             android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
     <TextView
+            android:layout_marginLeft="68dp"
             android:id="@+id/tv_content"
             android:layout_marginBottom="19dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="44dp"
+            android:layout_marginRight="36dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:text="SEE = Seeking Experience &amp; Engineering，意为探索用户体验与工程实践，由蚂蚁金服集团每年举办 1-2 次，包括专业分享、产品Workshop 等内容。"
             android:textColor="#ff333333"
             android:textSize="14dp"
-            android:layout_width="271dp" android:layout_height="wrap_content"/>
+            android:layout_width="0dp" android:layout_height="wrap_content"/>
     
     <View
             app:layout_constraintBottom_toBottomOf="parent"
