--- a/app/src/main/res/layout/vh_deal_record_item.xml
+++ b/app/src/main/res/layout/vh_deal_record_item.xml
@@ -3,9 +3,10 @@
                                               android:layout_width="match_parent"
                                               android:minHeight="135dp"
                                               android:layout_height="wrap_content"
+                                              android:layout_marginTop="7dp"
                                               android:layout_marginLeft="8dp"
                                               android:layout_marginRight="8dp"
-                                              android:layout_marginBottom="14dp"
+                                              android:layout_marginBottom="7dp"
                                               app:cardCornerRadius="5dp"
                                               app:cardElevation="3dp"
                                               xmlns:app="http://schemas.android.com/apk/res-auto">
